import Foundation

enum SectorEnum: String, CaseIterable {
    case industrials
    case healthcare
    case technology
    case telecomMedia = "telecom-media"
    case goods
    case energy
    case financials
    case all
}
